fix dark mode colors

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -160,6 +160,9 @@
     --clr-kb-shadow: 0 1px 1px rgba(255, 255, 255, 0.2),
       0 2px 0 0 rgba(255, 255, 255, 0.1) inset;
 
+    --clr-bg-table-ws: hsl(141.7, 76.6%, 20%);
+    --clr-bg-table-symb: hsl(200.60000000000002, 94.4%, 20%);
+
     --footer-bg: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0) 1px,
